fix(travel header): shift font size for new token
affects: @entur/travel

--- a/packages/travel/src/TravelHeader.scss
+++ b/packages/travel/src/TravelHeader.scss
@@ -9,7 +9,7 @@
     color: $colors-brand-white;
   }
   &--large {
-    font-size: $font-sizes-extra-large;
+    font-size: $font-sizes-extra-large2;
   }
   &--medium {
     font-size: $font-sizes-large;
